<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.twinkle.finitestatemachine.MainActivity"
    android:weightSum="2">

    <TextView
        android:id="@+id/current_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/state_mock"
        android:background="@color/colorArmed"
        android:textColor="@color/stateTextColor"
        android:gravity="center"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/lock_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_lock_text"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/lockx2_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_lock_x2_text"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/unlock_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_unlock_text"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/unlockx2_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_unlock_x2_text"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</LinearLayout>
